fix map overflowing its region in Safari

--- a/src/Engage360d/Bundle/TakedaBundle/Resources/public/css/frontend.css
+++ b/src/Engage360d/Bundle/TakedaBundle/Resources/public/css/frontend.css
@@ -1115,3 +1115,7 @@ input::-webkit-inner-spin-button {
 .info__md-title .ico-md { position: absolute; top: -1px; left: 0; }
 
 /* old styles END */
+
+.map .map__container-in {
+  overflow: hidden;
+}
